# dxlab-subplot

./: .eslintrc.json  .gitignore  .stglobalignore  CHANGELOG.md  README.md  package-lock.json  package.json
map_deck/: .cz.toml  .env.example  .eslintrc.json  CHANGELOG.md  package.json
map_deck/public/: index.html
map_deck/src/: App.js  App.scss  Routes.js  _global.scss  index.scss  slick-theme.scss
map_etl/: .cz.toml  .dockerignore  .env.example  .gitignore  .style.yapf  Dockerfile  README.md  cli.py  coordinates.py  docker_build.sh  docker_run.sh  pyproject.toml
map_etl/app/: settings.py
map_etl/app/datasource/: google.py  images.py  klokan.py  slnsw.py  suburbs.py
map_etl/app/processing/: __init__.py  dx_maps_data.py  mixins.py
map_etl/app/tools/: data_loader.py  data_storage.py  mongo_loader.py
map_etl/data/NSW_suburbs/: NSW_suburbs_2019.csv
map_etl/data/SLNSW/: SLNSW_Subdivision_maps_Klokan_Schema_20170207.csv  SLNSW_subdivision_titles_links_20201105.json
map_etl/data/export/: subdivisions.json
map_etl/data/klokan/: georeferencer_nsw.csv
map_packer/: .gitignore  .stglobalignore  README.md  main.py  pyproject.toml  settings.py
public/: maps_sheet.json
public/data/: subdivisions.json
public/models/: opera_house.glb  sydney_bridge.glb
public/sprites/: subdivisions_10.json  subdivisions_11.json  subdivisions_12.json  subdivisions_13.json  subdivisions_14.json  subdivisions_15.json  subdivisions_16.json  subdivisions_17.json  subdivisions_18.json  subdivisions_19.json  (+7 more)
src/: App.css  App.js  App.scss  index.css  index.scss
(+178 files in other folders)
